update the content

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,10 +52,10 @@
         <div id="about" class="d-flex flex-column justify-content-center align-items-center rounded mt-2 mb-5 p-5"
             style="background-color: #f7e6ca;">
             <p style="font-size: 17px;">
-                Welcome to Backpack Predictor, where smart shopping meets advanced technology! Backpack Predictor is
-                transforming the way you shop by using powerful AI models and an up-to-date database of price trends.
-                With cutting-edge price prediction algorithms, Backpack Predictor helps you find the best deals and
-                track price changes on your favorite backpacks with ease.
+                Welcome to Backpack Predictor, the smarter way to shop! We’re revolutionizing your shopping experience
+                with advanced AI and real-time price trends, making it easier than ever to find the best deals on your
+                favorite backpacks. Our cutting-edge price prediction tool keeps you updated on price changes, so you
+                can shop with confidence and seize the best offers.
             </p>
         </div>
     </div>
